--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <p>"Ciao <span id="nome" class="text_uppercase"></span>"</p>
+    <p>Ciao <span id="nome" class="text_uppercase"></span></p>
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
